--- a/template/master.html
+++ b/template/master.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand" style="background-color:rgb(52, 10, 240); color:rgb(245, 237, 228)" >
+    <nav class="navbar navbar-expand" style="background-color:rgb(9, 104, 168); color:rgb(245, 237, 228)" >
         <div class="container-fluid">
           <!-- <a class="navbar-brand link-light" href="javascript:void(0)">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -51,11 +51,21 @@
                 <a class="nav-link h4 link-light " href="/">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link h4 link-light " href="/books/">Books</a>
+                <a class="nav-link h4 link-light " href="/academic">Academic</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link h4 link-light " href="/question/">Questions </a>
+                <a class="nav-link h4 link-light " href="/">Blood community</a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link h4 link-light " href="/">Alumni</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link h4 link-light " href="/">Achievement</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link h4 link-light " href="/books/">Notice</a>
+              </li>
+              
             </ul>
             <ul class="navbar-nav d-flex">
              {% if user.is_authenticated %}
