--- a/template/academic.html
+++ b/template/academic.html
@@ -1,67 +1,80 @@
 {% extends "master.html" %}
 
 {% block title %}
-  Academic
+Academic
 {% endblock %}
-<script>
-function myFunction() {
-  // Declare variables
-  var input, filter, table, tr, td, i, txtValue;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
-  tr = table.getElementsByTagName("tr");
-
-  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[1];
-    if (td) {
-      txtValue = td.textContent || td.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
-      }
-    }
-  }
-}
-</script>
-  
 
 {% block content %}
 <nav class="navbar acadedmic_nav_color navbar-expand-sm  navbar-light ">
 
-<div class="container-fluid  justify-content-center">
-      <ul class="navbar-nav  ">
-        <li class="nav-item active ">
-          <a class="nav-link" href="#">Syllabus</a>
-        </li>
-        <li class="nav-item active ms-3">
-          <a class="nav-link" href="/routine/">Routine</a>
-        </li>
-        <li class="nav-item active ms-3">
-          <a class="nav-link" href="#">Question Bank</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active ms-3" href="#">Tutorial</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link active ms-3" href="#">Notices</a>
-          </li>
-      </ul>
-    </div>
-  </nav>
-  
-  <div class="row">
-    <div class="col-sm-3 col_color p-3 text-center">
-      <input class="border-0" style="width: 100%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Course Title..">
-      <ol class="list-group list-group-circle">
-        <li class="list-group-item bg-transparent m-2 ">2018-19</li>
-        <li class="list-group-item bg-transparent m-2 ">2018-19</li>
-        <li class="list-group-item bg-transparent m-2 ">2018-19</li>
-      </ol>
-    </div>
-    
+  <div class="container-fluid  justify-content-center">
+    <ul class="navbar-nav  ">
+      <li class="nav-item  ">
+        <a class="nav-link active ms-3" href="/academic/">Syllabus</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3" href="/routine/">Routine</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3 " href="#">Question Bank</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active ms-3" href="#">Tutorial</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3" href="#">Notices</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="row">
+  <div class="col-3 col_color p-3 text-center">
+    <input class="border-0 m-2" style="width: 100%;" type="text" id="myInput"
+      onkeyup="myFunction()" placeholder="Search for Department..">
+    <ul id="sortable-list">
+      <li class=" sortable-item list-group-item bg-transparent m-2 ">Computer
+        Science</li>
+      <li class="sortable-item list-group-item bg-transparent m-2 ">Law</li>
+      <li class=" sortable-item list-group-item bg-transparent m-2 ">Pharmacy</li>
+    </ul>
+  </div>
+  <div class="col-3  p-3 text-center">
+    <input class="border-2 m-2" style="width: 100%;" type="text" id="myInput"
+      onkeyup="myFunction()" placeholder="Search for Sesssion..">
+      <form action="upload.php" method="post" enctype="multipart/form-data">
+        
+        <input type="submit" value="Upload PDF">
+    </form>
     
+        <ul class="m-5">
+          <li><a href="path_to_pdf_file1.pdf" target="_blank">2018-19</a></li>
+          <li><a href="path_to_pdf_file2.pdf" target="_blank">2019-2020</a></li>
+          <li><a href="path_to_pdf_file3.pdf" target="_blank">2020-2021</a></li>
+        
+    </ul>
+
+  </div>
+</div>
+<script>
+    function myFunction() {
+      // Get input element and filter value
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById('myInput');
+      filter = input.value.toUpperCase();
+      ul = document.getElementById('sortable-list');
+      li = ul.getElementsByTagName('li');
+
+      // Loop through all list items and hide those that don't match the search query
+      for (i = 0; i < li.length; i++) {
+        a = li[i];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          li[i].style.display = '';
+        } else {
+          li[i].style.display = 'none';
+        }
+      }
+    }
+  </script>
 {% endblock %}
