--- a/template/master.html
+++ b/template/master.html
@@ -51,10 +51,10 @@
                 <a class="nav-link h4 link-light " href="/">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link h4 link-light " href="/academic">Academic</a>
+                <a class="nav-link h4 link-light " href="/academic/">Academic</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link h4 link-light " href="/">Blood community</a>
+                <a class="nav-link h4 link-light " href="/blood_community/">Blood community</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link h4 link-light " href="/">Alumni</a>
