--- a/template/routine.html
+++ b/template/routine.html
@@ -34,7 +34,7 @@ function myFunction() {
 <div class="container-fluid  justify-content-center">
       <ul class="navbar-nav  ">
         <li class="nav-item active ">
-          <a class="nav-link" href="#">Syllabus</a>
+          <a class="nav-link" href="/academic/">Syllabus</a>
         </li>
         <li class="nav-item active ms-3">
           <a class="nav-link" href="/routine/">Routine</a>
