--- a/template/academic.html
+++ b/template/academic.html
@@ -30,13 +30,12 @@ Academic
 
 <div class="row">
   <div class="col-3 col_color p-3 text-center">
-    <input class="border-0 m-2" style="width: 100%;" type="text" id="myInput"
+    <input class="border-0 m-2 rounded-3" style="width: 100%;" type="text" id="myInput"
       onkeyup="myFunction()" placeholder="Search for Department..">
-    <ul id="sortable-list">
-      <li class=" sortable-item list-group-item bg-transparent m-2 ">Computer
-        Science</li>
-      <li class="sortable-item list-group-item bg-transparent m-2 ">Law</li>
-      <li class=" sortable-item list-group-item bg-transparent m-2 ">Pharmacy</li>
+    <ul class="list-unstyled text-start" id="sortable-list">
+      <li><button class="btn">Computer Science</button></li>
+      <li><button class="btn">Law</button></li>
+      <li><button class="btn">Pharmacy</button></li>
     </ul>
   </div>
   <div class="col-3  p-3 text-center">
