create alumni.html and link up

--- a/template/master.html
+++ b/template/master.html
@@ -57,7 +57,7 @@
                 <a class="nav-link h4 link-light " href="/blood_community/">Blood community</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link h4 link-light " href="/">Alumni</a>
+                <a class="nav-link h4 link-light " href="/alumni/">Alumni</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link h4 link-light " href="/">Achievement</a>
