--- a/template/login.html
+++ b/template/login.html
@@ -27,11 +27,12 @@ Login
         <div class="col-md-6 mx-auto">
             <div class="form-container">
                 <h2 class="text-center">Registration</h2>
-                <form action="#" method="post">
+                <form action={% url 'login' %} method="post">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email"
-                            name="email" required>
+                        <label for="username">User name</label>
+                        <input type="text" class="form-control" id="username"
+                            name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
