--- a/template/master.html
+++ b/template/master.html
@@ -27,7 +27,6 @@
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="{% static 'js/js.js' %}"></script>
-
    
     </head>
 </head>
@@ -67,14 +66,14 @@
               </li>
               
             </ul>
-            <ul class="navbar-nav d-flex">
+            <ul class="navbar-nav d-flex" >
              {% if user.is_authenticated %}
            
             <li class="nav-item">
-              <a class="nav-link {% if request.path == '/profile/' %}active{% endif %}" href="/profile/">{{user.username}}</a>
+              <a class="nav-link text-warning {% if request.path == '/profile/' %}active{% endif %}" href="/profile/">{{user.username}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-danger {% if request.path == '/logout/' %}active{% endif %}" href="/logout/">Logout</a>
+              <a class="nav-link text-warning" href="/logout/">Logout</a>
             </li>
             {% else %} 
             
@@ -89,8 +88,9 @@
           </div>
         </div>
       </nav>
-    
-
+    <div class="text-center  text-white mt-2 {{type}} m-auto rounded-3 py-1" style="width: 90%;">
+      {{message}}
+    </div>
   {% block content %}
   {% endblock %}
 
