--- a/template/signup.html
+++ b/template/signup.html
@@ -27,9 +27,10 @@ Sign Up
         <div class="col-md-6 mx-auto">
             <div class="form-container">
                 <h2 class="text-center">Registration</h2>
-                <form action="#" method="post">
+                <form action="{% url 'signup' %}" method="post">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">User name</label>
                         <input type="text" class="form-control" id="username"
                             name="username" required>
                     </div>
