show and update user profile details

--- a/template/master.html
+++ b/template/master.html
@@ -94,6 +94,9 @@
   {% block content %}
   {% endblock %}
 
+  {% block footer %}
+  <div class="bg-linear mt-5" style="text-align: center;">It is footer</div>
+  {% endblock %}
 </body>
 
 
