--- a/template/login.html
+++ b/template/login.html
@@ -27,7 +27,7 @@ Login
         <div class="col-md-6 mx-auto">
             <div class="form-container">
                 <h2 class="text-center">Registration</h2>
-                <form action={% url 'login' %} method="post">
+                <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="username">User name</label>
