--- a/template/profile.html
+++ b/template/profile.html
@@ -1,11 +1,102 @@
 {% extends "master.html" %}
-
+{% load static %}
 {% block title %}
   User Profile
 {% endblock %}
 
 {% block content %}
- user profile
+<style>
+.profile {
+    max-width: 400px;
+    margin: 0 auto;
+}
+.profile-picture {
+    text-align: center;
+}
+.profile-picture img {
+    max-width: 150px;
+    border-radius: 50%;
+}
+
+.inputGroup{
+  margin: 10px 0px;
+}
+
+.profile-info label {
+    font-weight: bold;
+}
+.profile-info input[type="text"], .profile-info input[type="email"] {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+.profile-info input[type="checkbox"] {
+    margin-right: 5px;
+}
+</style>
+<div class="profile">
+  <div class="profile-picture">
+      <img src="{% static 'img/User-Profile.png' %}" alt="Profile Picture">
+  </div>
+  <form action="{% url 'profile' %}" method="POST">
+    {% csrf_token %}
+  <div class="profile-info">
+    <div class="inputGroup">
+      <label for="fullname">Full name:</label>
+      <input type="text" pattern="[A-Za-z ]+" id="fullname" name="fullname"
+        {% if details.fullName %}
+        value="{{details.fullName}}"
+        {% endif %}
+      >
+    </div>
+    
+    <div class="inputGroup">
+      <label for="email">Email:</label>
+      <input type="email" id="email" value="{{user.email}}" disabled>
+    </div>
+    
+    <div class="inputGroup">
+      <label for="dept">Department:</label>
+      <input type="text" pattern="[A-Za-z0-9- ]+" id="dept" name="dept"
+        {% if details.department %}
+        value="{{details.department}}"
+        {% endif %}
+      >
+    </div>
+    
+    <div class="inputGroup">
+      <label for="session">session:</label>
+      <input type="text" pattern="[A-Za-z0-9- ]+" id="session" name="session"
+        {% if details.session %}
+        value="{{details.session}}"
+        {% endif %}
+      >
+    </div>
+    
+    <div class="inputGroup">
+      <label>You are :</label> <br>
+      <input type="radio" name="profession" value="0" {% if not details.isAlumni %}checked{% endif %} >
+      <label style="font-weight: 500;" for="student">Running student</label><br>
+      <input type="radio"  name="profession" value="1" {% if details.isAlumni and details.isAlumni == True %}checked{% endif %}>
+      <label style="font-weight: 500;" for="alumni">Alumni</label><br>
+    </div>
+    
+    <div class="inputGroup">
+      <label for="profession">Profession details (for alumni):</label>
+      <textarea type="text" name="profession_details" id="profession" style="width: 100%;" rows=3>{% if details.profession and details.isAlumni and details.isAlumni == True %}{{details.profession}}{% endif %}</textarea>
+    </div>
+
+    <div class="inputGroup">
+      <label for="address">Address:</label>
+      <textarea type="text" name="address" id="address" style="width: 100%;" rows=3>{% if details.address %}{{details.address}}{% endif %}</textarea>
+    </div>
+    
+    <div class="text-center" style="width: 100%;;">
+      <button class="btn bg-linear">Save</button>
+    </div>
+  </div>
+</form>
+</div>
 <script>
   function myFunction() {
     }
