--- a/template/home.html
+++ b/template/home.html
@@ -5,12 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container bg-image text-center" style="background-image:url(static/back.jpg);min-width:1350px;min-height: 90vh;">
-  <div class="card position-absolute top-50 start-50 translate-middle  p-3 mx-auto  bg-transparent text-white" style="width:800px; font-family: 'Brush Script MT', cursive">
+  <div class="container text-center p-3" style="border: 1px solid rgb(164, 163, 163); font-family: cursive,'Brush Script MT'; width: 800px;">
     <h1>Help and connect with everybody by exchanging yours need</h1>
     <p>Seniors can upload their questions and books</p>
-    <p>juniors take help from your junior by fulfil your seeks</p>
+    <p>Juniors take help from your junior by fulfil your seeks</p>
   </div>
-<div>
-    
 {% endblock %}
