create notice and achievement template

--- a/template/master.html
+++ b/template/master.html
@@ -59,10 +59,10 @@
                     <a class="nav-link h4 link-light " href="/alumni/">Alumni</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/">Achievement</a>
+                    <a class="nav-link h4 link-light " href="/achievement">Achievement</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/books/">Notice</a>
+                    <a class="nav-link h4 link-light " href="/notice/">Notice</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav d-flex" >
