--- a/static/style.css
+++ b/static/style.css
@@ -10,3 +10,16 @@
     background-color: rgb(238, 218, 218);
     height: 1000px;  
 }
+@keyframes slideInLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  /* Apply the animation to the card element */
+  .card.slide-in {
+    animation: slideInLeft 0.5s forwards;
+  }
