--- a/template/routine.html
+++ b/template/routine.html
@@ -1,66 +1,276 @@
 {% extends "master.html" %}
 
 {% block title %}
-  Academic
+Academic
 {% endblock %}
-<script>
-function myFunction() {
-  // Declare variables
-  var input, filter, table, tr, td, i, txtValue;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
-  tr = table.getElementsByTagName("tr");
-
-  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[1];
-    if (td) {
-      txtValue = td.textContent || td.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
-      }
-    }
-  }
-}
-</script>
-  
-
 {% block content %}
 <nav class="navbar acadedmic_nav_color navbar-expand-sm  navbar-light ">
 
-<div class="container-fluid  justify-content-center">
-      <ul class="navbar-nav  ">
-        <li class="nav-item active ">
-          <a class="nav-link" href="/academic/">Syllabus</a>
-        </li>
-        <li class="nav-item active ms-3">
-          <a class="nav-link" href="/routine/">Routine</a>
-        </li>
-        <li class="nav-item active ms-3">
-          <a class="nav-link" href="#">Question Bank</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active ms-3" href="#">Tutorial</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link active ms-3" href="#">Notices</a>
-          </li>
-      </ul>
-    </div>
-  </nav>
-  
-  <div class="row">
-    <div class="col-sm-3 col_color p-3 text-center">
-      <input class="border-0" style="width: 100%;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Course Title..">
-      <ol class="list-group list-group-circle">
-        
-        <li class="list-group-item bg-transparent m-2 ">2018-19</li>
-      </ol>
-    </div>
-    
+  <div class="container-fluid  justify-content-center">
+    <ul class="navbar-nav  ">
+      <li class="nav-item  ">
+        <a class="nav-link active ms-3" href="/academic/">Syllabus</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3" href="/routine/">Routine</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3 " href="/question_bank/">Question Bank</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active ms-3" href="/tutorial/">Tutorial</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link active ms-3" href="/academic_notice/">Notices</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="row">
+  <div class="col-3 col_color p-3 text-center" style="height: auto;">
+    <input class="border-0 m-2 rounded-3" style="width: 100%;" type="text"
+      id="myInput"
+      onkeyup="myFunction()" placeholder="Search for Department..">
+      <ul class="list-unstyled text-start" id="sortable-list">
+        <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
+        <li><a class="nav-link" href="#Law ">law</a></li>
+        <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
+      </ul>
+  </div>
+  <div class="col-9  p-3 text-center">
+
+    <div id="Computer Science" class="card text-dark bg-light m-4"
+    style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Computer Science</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="Law" class="card text-dark bg-light m-4"
+      style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Law</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="" class="card text-dark bg-light m-4"
+    style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Available</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="" class="card text-dark bg-light m-4"
+    style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Available</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="" class="card text-dark bg-light m-4"
+    style="max-width:100%;">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Available</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="" class="card text-dark bg-light m-4"
+    style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Available</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div id="Pharmacy" class="card text-dark bg-light m-4"
+    style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">Pharmacy</div>
+
+        <div>
+
+          <button type="button"
+            class="btn btn-sm border btn-default fw-bold mx-3"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#add_available_books">Add </button>
+          <button type="button" class="btn btn-default btn-sm border fw-bold"
+            style="color:blue;" data-bs-toggle="modal"
+            data-bs-target="#edit_available_books">edit</button>
+
+        </div>
+      </div>
+      
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2">
+          <li><a href="example1.pdf" target="_blank">2019</a></li>
+          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
+          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
+          <!-- Add more PDF links as needed -->
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+    function myFunction() {
+      // Get input element and filter value
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById('myInput');
+      filter = input.value.toUpperCase();
+      ul = document.getElementById('sortable-list');
+      li = ul.getElementsByTagName('li');
+
+      // Loop through all list items and hide those that don't match the search query
+      for (i = 0; i < li.length; i++) {
+        a = li[i];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          li[i].style.display = '';
+        } else {
+          li[i].style.display = 'none';
+        }
+      }
+    }
+    function myFunction2() {
+      // Get input element and filter value
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById('search_available');
+      filter = input.value.toUpperCase();
+      ul = document.getElementById('sortable-list2');
+      li = ul.getElementsByTagName('li');
+
+      // Loop through all list items and hide those that don't match the search query
+      for (i = 0; i < li.length; i++) {
+        a = li[i];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          li[i].style.display = '';
+        } else {
+          li[i].style.display = 'none';
+        }
+      }
+    }
     
+  
+  </script>
 {% endblock %}
