home page, academic

--- a/template/master.html
+++ b/template/master.html
@@ -40,11 +40,9 @@
             </button> -->
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item ms-5" style="font-family: Audiowide, sans-serif;">
-                    <h1>Help</h1>
-                    </li>
+                    
                     <li class="nav-item-default me-5" style="font-family: Audiowide, sans-serif;">
-                    <h1 style="color:red">!</h1>
+                        <img src="{%static 'img/logo.jpeg' %}" alt="Bootstrap" width="60" height="60">
                     </li>
                     <li class="nav-item ">
                     <a class="nav-link h4 link-light " href="/">Home</a>
