--- a/template/home.html
+++ b/template/home.html
@@ -5,9 +5,12 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container text-center p-3" style="border: 1px solid rgb(164, 163, 163); font-family: cursive,'Brush Script MT'; width: 800px;">
-    <h1>Help and connect with everybody by exchanging yours need</h1>
-    <p>Seniors can upload their questions and books</p>
-    <p>Juniors take help from your junior by fulfil your seeks</p>
-  </div>
+
+<div class="text-white m-0 p-0 text-center" style="background-color:rgb(162, 87, 232);min-width:100%;height: 90vh;font-family: 'Brush Script MT', cursive"> <h1>welcome to ccn community</h1>
+   <div class="card opacity-50 position-absolute top-50 start-50 translate-middle  p-3 mx-auto " style="background-image: url(static/img/logo.jpeg); width:200px; height: 200px;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center; "></div>
+   </div> 
+
 {% endblock %}
