home trying to blur

--- a/template/home.html
+++ b/template/home.html
@@ -36,22 +36,7 @@
       box-sizing: border-box;
     }
     
-    .bg-image {
-      /* The image used */
-      background-image: url("photographer.jpg");
-      
-      /* Add the blur effect */
-      filter: blur(8px);
-      -webkit-filter: blur(8px);
-      
-      /* Full height */
-      height: 100%; 
-      
-      /* Center and scale the image nicely */
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
+    
     .bg-text {
       background-color: rgb(0,0,0); /* Fallback color */
       background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
@@ -73,7 +58,7 @@
 </head>
 <body style="background-image: url(static/img/uni.jpg); 
 background-repeat: no-repeat;
-
+background-color: rgba(0, 0, 155, 0.4);
 background-position: center; text-align:center; color:aliceblue ">
   
   
