complete home page

--- a/template/home.html
+++ b/template/home.html
@@ -30,7 +30,7 @@
     <script src="{% static 'js/js.js' %}"></script>
     <style>
     .cursor-border {
-        border-bottom: 3px solid rgb(76, 0, 255);
+        border-bottom: 3px solid rgb(227, 224, 234);
     }
     * {
       box-sizing: border-box;
@@ -102,21 +102,26 @@ background-position: center; text-align:center; color:aliceblue ">
                     <li class="nav-item">
                         <a class="nav-link text-warning" href="/logout/">Logout</a>
                     </li>
-                    {% else %} 
                     
-                    <li class="nav-item">
-                        <a class="nav-link h4 link-light" href="/login">Login </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link h4 link-light" href="/signup">Signup </a>
-                    </li>
                     {%endif%}
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="bg-text "  >
+    <div class="bg-text m-3"  >
     <h1 >welcome to ccn community</h1>
+    {%if user.is_authenticated%}
+    {%else%}
+    <div class="m-5">
+      <ul>
+        <li>
+          <a  class="m-3 p-3 text-white" href="/login/"style="border: 2px solid white; text-decoration:none;">Admin</a>
+          <a class="m-3 p-3 text-white"href="/login/" style="border: 2px solid white; text-decoration:none;">Student</a>
+        </li>
+      </ul>
+      
+    </div>
+    {%endif%}
     </div>
     
     
