--- a/template/home.html
+++ b/template/home.html
@@ -25,8 +25,8 @@
   z-index: -1;
 }
 </style>
-<div class="container-fluid text-center" >
-    <img src="static/img/uni.jpg" style="filter: blur(5px); height: 100vh; width: 100%;">
+<div class="container-fluid text-center" style="height: fit-content;">
+    <img src="static/img/uni.jpg" style="filter: blur(5px); height: fit-content; width: 100%;">
     <div class="mx-auto " style="background-color: #b7b7b77d; border: 1px solid rgb(164, 163, 163);
     font-family: Helvetica, Arial; width: 800px;">
         <h1 class="fw-bold my-5">Welcome to CCN Community</h1>
@@ -42,5 +42,5 @@
             </ul>
         </div>
     </div>
-  </div>
+</div>
 {% endblock %}
