--- a/template/question_bank.html
+++ b/template/question_bank.html
@@ -28,36 +28,36 @@ Academic
 </nav>
 
 <div class="row">
+  
   <div class="col-3 col_color p-3 text-center" style="height: auto;">
     <input class="border-0 m-2 rounded-3" style="width: 100%;" type="text"
       id="myInput"
       onkeyup="myFunction()" placeholder="Search for Department..">
-      <ul class="list-unstyled text-start" id="sortable-list">
-        <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
-        <li><a class="nav-link" href="#Law ">law</a></li>
-        <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
-      </ul>
+    <ul class="list-unstyled text-start" id="sortable-list">
+      <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
+      <li><a class="nav-link" href="#Law ">law</a></li>
+      <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
+    </ul>
   </div>
+  
   <div class="col-9  p-3 text-center">
+    {% if request.user.is_superuser %}
+  <div>
 
+    <button type="button"
+      class="btn btn-sm border btn-default fw-bold mx-3"
+      style="color:blue;" data-bs-toggle="modal"
+      data-bs-target="#add_syllabus">Add Questions</button>
+    
+  </div>
+  {%endif%}
     <div id="Computer Science" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
+      style="max-width:100%; ">
       <div class="card-header d-inline-flex ">
         <div class="flex-fill">Computer Science</div>
 
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
       </div>
-      
+
       <div class="card m-4 p-3">
         <ul id="sortable-list2">
           <li><a href="example1.pdf" target="_blank">2019</a></li>
@@ -67,166 +67,36 @@ Academic
         </ul>
       </div>
     </div>
-    <div id="Law" class="card text-dark bg-light m-4"
-      style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Law</div>
 
-        <div>
+  </div>
+</div>
 
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
+<!-- modal -->
+<div class="modal fade" id="add_syllabus" tabindex="-1"
+  aria-labelledby="addLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addLabel">Add the Syllabus with session</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"
+          aria-label="Close"></button>
       </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
+      <div class="modal-body">
 
-        <div>
+        <form action="{% url 'question_bank' %}" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <label for ='dept'>Department Name:</label>
+          <input type="text" name="dept_name"><br><br>
+          <label for="session">Session:</label>
+          <input type="text" name="session"><br><br>
+          <label for="pdfFile">Choose a PDF file:</label>
+          <input type="file" class="form-control-file" id="pdfFile"
+            name="pdfFile">
+          <div class="text-center m-3">
+            <button type="submit" class="btn btn-primary">Upload</button>
+          </div>
 
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%;">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="Pharmacy" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Pharmacy</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
+        </form>
       </div>
     </div>
   </div>
