--- a/template/master.html
+++ b/template/master.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>{% block title %}{% endblock %}</title>
-  {% load bootstrap5 %}
+  {% load django_bootstrap5 %}
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
   {% bootstrap_css %}
   {% bootstrap_javascript %}
