--- a/template/master.html
+++ b/template/master.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </nav>
-    <div class="text-center  text-white mt-2 {{type}} m-auto rounded-3 py-1" style="width: 90%;">
+    <div class="text-center  text-white {% if type %}mt-2 py-1{% endif %} {{type}} m-auto rounded-3 " style="width: 90%;">
       {{message}}
     </div>
     
