--- a/template/notice.html
+++ b/template/notice.html
@@ -4,273 +4,47 @@
 Academic
 {% endblock %}
 {% block content %}
-<nav class="navbar acadedmic_nav_color navbar-expand-sm  navbar-light ">
-
-  <div class="container-fluid  justify-content-center">
-    <ul class="navbar-nav  ">
-      <li class="nav-item  ">
-        <a class="nav-link active ms-3" href="/academic/">Syllabus</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3" href="/routine/">Routine</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3 " href="/question_bank/">Question Bank</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active ms-3" href="/tutorial/">Tutorial</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3" href="/academic_notice/">Notices</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 <div class="row">
-  <div class="col-3 col_color p-3 text-center" style="height: auto;">
-    <input class="border-0 m-2 rounded-3" style="width: 100%;" type="text"
-      id="myInput"
-      onkeyup="myFunction()" placeholder="Search for Department..">
-      <ul class="list-unstyled text-start" id="sortable-list">
-        <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
-        <li><a class="nav-link" href="#Law ">law</a></li>
-        <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
-      </ul>
-  </div>
-  <div class="col-9  p-3 text-center">
-
-    <div id="Computer Science" class="card text-dark bg-light m-4"
+  <div class="col  p-3 text-center">
+    <div class="text-end m-4">
+      {% if user.is_superuser %} 
+        <A class="btn btn-info" href="{% url 'add_notice' %}">Add Notice</A>
+      {% endif %}
+    </div>
+    <div id="Academic" class="card text-dark bg-light m-4"
     style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Computer Science</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
       
       <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
+        <table class="table table-striped">
+          <tr>
+            <th>Title</th>
+            <th>Category</th>
+            <th>Department</th>
+            <th>PDF</th>
+            {% if user.is_superuser %}
+            <th>Action</th>
+            {% endif %}
+          </tr>
+          {% for notice in notices %}
+          <tr>
+            <td>{{notice.title}}</td>
+            <td>{{notice.category}}</td>
+            <td>{{notice.department.department}}</td>
+            <td>
+              <a href="{% url 'download_pdf' notice_id=notice.id %}">View</a>
+            </td>
+            {% if user.is_superuser %}
+            <th>
+              <a href="{% url 'delete_notice' notice_id=notice.id %}">Delete</a>
+            </th>
+            {% endif %}
+          </tr>
+          {% endfor %}
+        </table>
       </div>
     </div>
-    <div id="Law" class="card text-dark bg-light m-4"
-      style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Law</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%;">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Available</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
-    <div id="Pharmacy" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Pharmacy</div>
-
-        <div>
-
-          <button type="button"
-            class="btn btn-sm border btn-default fw-bold mx-3"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#add_available_books">Add </button>
-          <button type="button" class="btn btn-default btn-sm border fw-bold"
-            style="color:blue;" data-bs-toggle="modal"
-            data-bs-target="#edit_available_books">edit</button>
-
-        </div>
-      </div>
-      
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
-    </div>
+    
   </div>
 </div>
-<script>
-    function myFunction() {
-      // Get input element and filter value
-      var input, filter, ul, li, a, i, txtValue;
-      input = document.getElementById('myInput');
-      filter = input.value.toUpperCase();
-      ul = document.getElementById('sortable-list');
-      li = ul.getElementsByTagName('li');
-
-      // Loop through all list items and hide those that don't match the search query
-      for (i = 0; i < li.length; i++) {
-        a = li[i];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-          li[i].style.display = '';
-        } else {
-          li[i].style.display = 'none';
-        }
-      }
-    }
-    function myFunction2() {
-      // Get input element and filter value
-      var input, filter, ul, li, a, i, txtValue;
-      input = document.getElementById('search_available');
-      filter = input.value.toUpperCase();
-      ul = document.getElementById('sortable-list2');
-      li = ul.getElementsByTagName('li');
-
-      // Loop through all list items and hide those that don't match the search query
-      for (i = 0; i < li.length; i++) {
-        a = li[i];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-          li[i].style.display = '';
-        } else {
-          li[i].style.display = 'none';
-        }
-      }
-    }
-    
-  
-  </script>
 {% endblock %}
